Fix some spacing issues

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -172,7 +172,7 @@
 }
 
 p {
-    padding-top: 10px;
+    padding-bottom: 15px;
 }
 
 
